--- a/modal/index.html
+++ b/modal/index.html
@@ -113,7 +113,7 @@ modal.close();
 <pre>
 modal.iframe('lorem-ipsum.html');
 </pre>
-<p align="center"><a href="javascript:void(0);" onclick="javascript:modal.iframe('lorem-ipsum.html');">Clique aqui</a></p>
+<p align="center"><a href="javascript:void(0);" onclick="javascript:modal.iframe('http://htmlpreview.github.io/?https://github.com/leobreda/html/blob/master/modal/lorem-ipsum.html');">Clique aqui</a></p>
 </td>
 <td style="width:auto">
 <pre>
@@ -121,7 +121,7 @@ modal.iframe('lorem-ipsum.html',{
     title:'Lorem Ipsum'
 });
 </pre>
-        <p align="center"><a href="javascript:void(0);" onclick="javascript:modal.iframe('lorem-ipsum.html',{
+        <p align="center"><a href="javascript:void(0);" onclick="javascript:modal.iframe('http://htmlpreview.github.io/?https://github.com/leobreda/html/blob/master/modal/lorem-ipsum.html',{
             title:'Lorem Ipsum'
         });">Clique aqui</a></p>
         
