--- a/modal/lorem-ipsum.html
+++ b/modal/lorem-ipsum.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin ullamcorper augue vitae ultricies. Aliquam vehicula imperdiet gravida. Suspendisse tempus erat a hendrerit rhoncus. Nam nec ante non diam feugiat euismod id sit amet lacus. Donec scelerisque sed leo vitae imperdiet. Proin sodales fringilla mauris pulvinar molestie. Aliquam fringilla bibendum leo, vel ornare odio fermentum eget. Integer porta vel risus ut dapibus. Nulla lacus libero, lacinia vitae odio nec, porttitor ultrices lacus.
+    <p>Lorem ipsum dolor sit amet, <strong>consectetur adipiscing</strong> elit. Nullam sollicitudin ullamcorper augue vitae ultricies. Aliquam vehicula imperdiet gravida. Suspendisse tempus erat a hendrerit rhoncus. Nam nec ante non diam feugiat euismod id sit amet lacus. Donec scelerisque sed leo vitae imperdiet. Proin sodales fringilla mauris pulvinar molestie. Aliquam fringilla bibendum leo, vel ornare odio fermentum eget. Integer porta vel risus ut dapibus. Nulla lacus libero, lacinia vitae odio nec, porttitor ultrices lacus.
 
             In vulputate, justo vel consectetur mollis, elit ipsum vehicula quam, nec eleifend nulla lorem sed elit. Nulla in malesuada mauris. Ut vel ligula et sem luctus dapibus. Praesent tempus, leo ac laoreet auctor, diam orci condimentum enim, vitae venenatis nulla nunc nec nulla. Nullam varius elit eu sollicitudin malesuada. Morbi sed risus orci. Donec fringilla hendrerit lacus quis interdum.
             
